--- a/client/s.css
+++ b/client/s.css
@@ -328,21 +328,36 @@ a.goto_article {
     /*filter: drop-shadow(0px 0px 5px white);    */
 }
 
+.zoomer {
+    /*animation: fadeout .5s; */
+    transition: all .3s ease !important; 
+
+}
 .zoomer:hover {
-    transition: all .1s ease !important; 
+    transition: all .3s ease !important; 
+    /*text-shadow: 0 0 3px grey !important;*/
+    /*filter: drop-shadow(0px 0px 5px grey);    */
     z-index: 1000 !important;
+    /*animation: fadein .5s !important;*/
     transform: scale(1.1) !important;
+    /*animation: fadein .5s !important;*/
+    /*animation: fadeout .5s; */
 }
 /*img.zoomer:hover {*/
 /*    transition: all .2s ease !important; */
 /*    z-index: 1000 !important;*/
 /*    transform: scale(1.2) !important;*/
 /*}*/
+.superzoom {
+    /*animation: fadeout .5s; */
+    transition: all .3s ease !important; 
+
+}
 .superzoom:hover {
-    transition: all .2s ease !important; 
+    transition: all .25s ease !important; 
     transform: scale(3) !important;
     z-index:1000 !important;
-    border-radius: 7px !important;
+    /*border-radius: 7px !important;*/
     /*animation: fadein .5s !important;*/
     /*-webkit-transition: opacity .25s ease-in !important;*/
     /* -webkit-transition: opacity .25s ease-out; */
