v1 subreddit import with 1 on news, add init subreddits above reddit

--- a/client/reddit.jade
+++ b/client/reddit.jade
@@ -1,6 +1,10 @@
 template(name='reddit')
     .ui.stackable.grid
         .row
+            .sixteen.wide.column
+                a.ui.header.search_subs subreddits
+                each subreddit_docs
+                    .ui.header #{data.display_name}
             .sixteen.wide.column.smallscroll
                 // a.icon.ui.big.circular.icon.button.zoomer(href='/')
                 //     i.large.yin.yang.grey.icon
