--- a/client/site_users.jade
+++ b/client/site_users.jade
@@ -98,6 +98,7 @@ template(name='stackuser_item')
             a.ui.inline.header.say_name.zoomer(href="/site/#{site}/user/#{user_id}" class=post_header_class) 
                 |!{display_name}
                 small #{reputation}
+            |!{about_me}
             strong(title="#{site} rank") ##{site_rank} 
             strong(title='global rank') ##{global_rank}
 
